Rewritten core logic: 1. Implemented base of dual (JWT + hardened cookie) authentication. 2. UUIDs for filenames. 3. File validation (magic byte, extension). 4. Extended tests, logging.