@@ -1,9 +1,10 @@
 package com.example.fsdemo;
 
-
 import com.example.fsdemo.service.UserDetailsServiceImpl;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
@@ -20,9 +21,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
@@ -30,6 +31,9 @@ public class SecurityConfig {
     private final UserDetailsServiceImpl userDetailsService;
     private final AuthenticationFilter authenticationFilter;
     private final AuthEntryPoint exceptionHandler;
+
+    @Value("${cors.allowed.origins:*}") // Default to all for easy dev, restrict in prod
+    private String[] allowedOrigins;
 
     public SecurityConfig(UserDetailsServiceImpl userDetailsService,
                           AuthenticationFilter authenticationFilter,
@@ -39,18 +43,18 @@ public class SecurityConfig {
         this.exceptionHandler = exceptionHandler;
     }
 
+    // Configure global authentication manager (optional if using AuthenticationConfiguration)
     public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
         auth.userDetailsService(userDetailsService)
-                .passwordEncoder(argon2Encoder());
+                .passwordEncoder(argon2PasswordEncoder());
     }
 
     @Bean
-    public PasswordEncoder argon2Encoder() {
-        // Setup as per OWASP cheatsheet (March 2025)
+    public PasswordEncoder argon2PasswordEncoder() {
         int saltLength = 16;
         int hashLength = 32;
         int parallelism = 1;
-        int memory = 19 * 1024;
+        int memory = 19 * 1024; // 19 MiB
         int iterations = 2;
         return new Argon2PasswordEncoder(saltLength, hashLength, parallelism, memory, iterations);
     }
@@ -64,27 +68,45 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         var source = new UrlBasedCorsConfigurationSource();
         var config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(List.of("*"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(false);
-        config.applyPermitDefaultValues();
-        /* config.setAllowedOrigins(List.of("http://localhost:3000")); */
+
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList(
+                HttpHeaders.AUTHORIZATION,
+                HttpHeaders.CONTENT_TYPE,
+                HttpHeaders.ACCEPT
+        ));
+        // Allow credentials (cookies) to be sent from frontend
+        config.setAllowCredentials(true);
+        // Expose the Authorization header (for JWT)
+        config.setExposedHeaders(List.of(HttpHeaders.AUTHORIZATION));
+        // Optional: Set max age for preflight requests
+        config.setMaxAge(3600L); // 1 hour
+
         source.registerCorsConfiguration("/**", config);
         return source;
     }
 
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf((AbstractHttpConfigurer::disable)) // CSRF disabled
-                .cors(withDefaults()) // CORS filter
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Stateless sessions
+                // Disable CSRF - Relying on SameSite=Strict cookie and fingerprint check
+                .csrf(AbstractHttpConfigurer::disable)
+                // Enable CORS using the configured source
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers(HttpMethod.POST, "/login").permitAll() // Login accessible without auth
-                        .anyRequest().authenticated()) // Everything else requires auth
+                        .requestMatchers(HttpMethod.POST, "/login").permitAll() // Login endpoint is public
+                        //.requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/api-docs/**").permitAll()
+                        .anyRequest().authenticated() // All other requests require authentication
+                )
+                // Add our custom filter BEFORE the standard UsernamePasswordAuthenticationFilter
                 .addFilterBefore(authenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .exceptionHandling((exceptionHandling) -> exceptionHandling.authenticationEntryPoint(exceptionHandler));
+                // Configure exception handling, specifically for authentication errors
+                .exceptionHandling((exceptionHandling) ->
+                        exceptionHandling.authenticationEntryPoint(exceptionHandler)
+                );
 
         return http.build();
     }
